style.css
/* Reset CSS */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* Define color variables */
:root {
    --primary-color: #007bff;
    --secondary-color: #343a40;
    --text-color: #333;
}

body {
    font-family: Arial, sans-serif;
    line-height: 1.6;
    background-color: #ededed;
}

.name-letter {
    text-shadow: 2px 2px 4px #000000d6, -2px -2px 4px #97979786; /* Add a slight shadow */
}

.section-title-letter{
    text-shadow:inset 2px 2px 4px #000000d6, inset -2px -2px 4px #97979786; /* Add a slight shadow */
}

header {
    margin-left: 190px; /* Match the width of the left panel */
}

main {
    padding: 20px;
    margin-left: 200px; /* Match the width of the left panel */
}

/* CSS Styles for Left Panel Navigation */
#left-panel {
    display: block; /* Set initial display to block */
    position: fixed;
    top: 0;
    left: 0;
    width: 200px; /* Adjust width as needed */
    height: 100%;
    background-color: #343a40; /* Dark background color */
    color: #fff;
    padding: 20px;
    overflow-y: auto; /* Enable scrolling for the navigation panel */
}


@media screen and (max-width: 700px) {
    /* Hide the left panel when screen width is smaller than 700 pixels */
    #left-panel {
        display: none;
    }

    /* Adjust content width when left panel is hidden */
    main {
        margin-left: 0; /* Remove margin when left panel is hidden */
    }

    header {
        margin-left: 0px; /* Match the width of the left panel */
    }
}

/* Update navigation styles */
#left-panel {
    background-color: var(--secondary-color);
    color: #fff;
    padding: 20px;
    overflow-y: auto;
    font-size: 1.2rem;
}

#left-panel ul {
    list-style-type: none;
    padding: 0;
}

#left-panel ul li {
    margin-bottom: 20px; /* Adjust spacing between list items */
}

#left-panel ul li a {
    color: #fff;
    text-decoration: none;
    display: block; /* Make the link a block element to occupy full width */
    padding: 20px; /* Add padding for better clickability */
    border-radius: 5px; /* Add border radius for rounded corners */
    transition: transform 0.1s ease-in-out; /* Add transition for smooth animation */
    box-shadow: 7px 7px 14px #262626, -7px -7px 14px #6666669b;
}

#left-panel ul li a:hover {
    /* Scale up the button on hover */
    transform: scale(1.1);
    /* Change text color */
    color: #00f2ff;
}

#left-panel ul li a:active {
    box-shadow: inset 7px 7px 14px #262626, inset -7px -7px 14px #6666669b;
    /* Scale down the button on active */
    transform: scale(0.9);
}

/* Update section styles */
section {
    margin-bottom: 40px;
    padding: 20px;
    border-radius: 10px;
    /* background-color: #ededed; */
    background-color: #ededed;
    box-shadow:  7px 7px 14px #c9c9c9,
             -7px -7px 14px #ffffff;
    color: var(--text-color);
}

section:hover {
    box-shadow: inset 7px 7px 14px #c9c9c9,
            inset -7px -7px 14px #ffffff;
}

section:active {
    box-shadow: inset 7px 7px 14px #c9c9c9,
            inset -7px -7px 14px #ffffff;
}

section h2 {
    color: #343a40;
    margin-bottom: 20px;
    /* transition: text-shadow 0.3s ease-in-out; */
}


section:hover .project-class {
    box-shadow: 7px 7px 14px #c9c9c9, -7px -7px 14px #ffffff;
}
section:active .project-class {
    box-shadow: 7px 7px 14px #c9c9c9, -7px -7px 14px #ffffff;
}

section:hover .content-class {
    box-shadow: 7px 7px 14px #c9c9c9, -7px -7px 14px #ffffff;
}
section:active .content-class {
    box-shadow: 7px 7px 14px #c9c9c9, -7px -7px 14px #ffffff;
}

.project-class {
    background-color: #ededed;
    padding: 20px;
    border-radius: 5px;
    box-shadow: inset 7px 7px 14px #c9c9c9,
            inset -7px -7px 14px #ffffff;
    margin-top: 20px;
}

.project-class h3 {
    color: #008cff;
    margin-bottom: 10px;
}

.content-class {
    background-color: #ededed;
    padding: 20px;
    border-radius: 5px;
    box-shadow: inset 7px 7px 14px #c9c9c9,
            inset -7px -7px 14px #ffffff;
}
.content-class h3 {
    color: #007bff;
    margin-bottom: 10px;
}

.content-class ol {
    margin-left: 20px;
}
.content-class ul {
    margin-left: 20px;
}

.experience-class p {
    margin-bottom: 15px;
}
.courses-class p {
    display: flex;
    flex-wrap: wrap;
}

.courses-class p p {
    margin-right: 20px;
    margin-bottom: 10px;
}

.achievements-class {
    padding: 30px;
    border-radius: 5px;
    background-color: #ededed;
    box-shadow: inset 7px 7px 14px #c9c9c9,
             inset -7px -7px 14px #ffffff;
}
.achievements-class:hover {
    box-shadow: 7px 7px 14px #c9c9c9,
             -7px -7px 14px #ffffff;
}
.achievements ul {
    list-style-type: disc;
    margin-left: 20px;
}

footer {
    background-color: #343a40;
    color: #fff;
    padding: 1rem;
    text-align: center;
}

/* Update header animation */
@keyframes slideIn {
    from {
        transform: translateY(-100%);
    }
    to {
        transform: translateY(0);
    }
}

.mail-icon img {
    transition: opacity 0.3s ease;
}

.mail-icon:hover img {
    opacity: 0.7;
    /* For 3d effect when hovered the icon magnifies */
    /* transform: scale(1.2); */
}

.github-icon img {
    transition: opacity 0.3s ease;
}

.github-icon:hover img {
    opacity: 0.7;
    /* transform: scale(1.2); */
}

.linkedin-icon img {
    transition: opacity 0.3s ease;
}

.linkedin-icon:hover img {
    opacity: 0.7;
    /* transform: scale(1.2); */
}

.icon-container {
    padding-left: 10px;
    display: flex;
    justify-content: space-between;
    width: 350px;
}
/* Update icon styles */
.icon-container a {
    display: inline-block;
    background-color: #ededed;
    padding: 15px;
    border-radius: 10px;
    box-shadow: 7px 7px 14px #c9c9c9, -7px -7px 14px #ffffff;
    transition: transform 0.1s, box-shadow 0.1s;
}

/* Update icon hover styles */
.icon-container a:hover {
    transform: scale(1.1);
    box-shadow: 5px 5px 10px #c9c9c9, -5px -5px 10px #ffffff;
}

/* On click */
.icon-container a:active {
    transform: scale(0.9);
    box-shadow: inset 3px 3px 6px #c9c9c9, inset -3px -3px 6px #ffffff;
}

text {
    font-size: 150px;
    font-family: 'Oswald', serif;
    font-weight: 900;
}

